--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,125 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-size: 1.1rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+#root {
+  max-width: 650px;
+  margin: 20px auto;
+}
+
+.form-input {
+}
+.btn-save {
+  height: 27px;
+  width: 60px;
+  margin-left: 4px;
+}
+
+button {
+  border-radius: 4px;
+  background-color: #ff3737bf;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-edit, .btn-remove {
+  width: 27px;
+  height: 27px;
+  margin: 6px;
+}
+
+.btn-edit {
+  background-image: url(../image/edit.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.btn-remove {
+  background-image: url(../image/remove.png);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.item-text {
+  margin-right: 10px;
+  width: 350px;
+  align-self: center;
+  padding-left: 5px;
+}
+
+ul > li {
+  display: flex;
+  border: 1px solid grey;
+  width: fit-content;
+  height: 40px;
+  margin: 5px;
+  border-radius: 3px;
+}
+
+.edit-input {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.edit-btn {
+  margin: 10px;
+}
+
+.edit-btn > button {
+  height: 27px;
+  width: fit-content;
+  padding: 0 10px;
+  margin-right: 10px;
+}
+
+.error {
+  border-radius: 5px;
+  background-color: rgb(253, 130, 130);
+  width: 280px;
+  height: 40px;
+  margin: 20px auto;
+  text-align: center;
+  padding-top: 20px;
+}
+
+
+.loader-btn {
+  font-size: 10px;
+  margin: 6px 26px;
+  text-indent: -9999em;
+  width: 27px;
+  height: 27px;
+  border-radius: 50%;
+  background: #f74040;
+  background: linear-gradient(to right, #f74040 10%, rgba(247,64,64, 0) 42%);
+  position: relative;
+  animation: load3 1.4s infinite linear;
+  transform: translateZ(0);
+}
+
+.loader-btn:before {
+  width: 50%;
+  height: 50%;
+  background: #f74040;
+  border-radius: 100% 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+}
+.loader-btn:after {
+  background: #ffffff;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  content: '';
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
