--- a/src/index.css
+++ b/src/index.css
@@ -62,14 +62,15 @@ ul > li {
   margin: 10px;
 }
 
-.edit-btn {
+.edit-buttons {
+  display: flex;
   margin: 10px;
 }
 
-.edit-btn > button {
-  height: 27px;
+.edit-buttons > button {
+  height: 39px;
   width: fit-content;
-  padding: 0 10px;
+  padding: 0 13px;
   margin-right: 10px;
 }
 
@@ -81,6 +82,21 @@ ul > li {
   margin: 20px auto;
   text-align: center;
   padding-top: 20px;
+}
+
+form {
+  position: relative;
+}
+
+.hidden-form {
+  opacity: 0.3;
+}
+
+.hidden {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
 
@@ -120,4 +136,8 @@ ul > li {
   left: 0;
   bottom: 0;
   right: 0;
+}
+
+.none {
+  display: none;
 }
