--- a/src/loader.css
+++ b/src/loader.css
@@ -1,3 +1,5 @@
+/* https://projects.lukehaas.me/css-loaders/ */
+
 .loader {
   font-size: 10px;
   margin: 50px auto;
@@ -18,6 +20,7 @@
   -ms-transform: translateZ(0);
   transform: translateZ(0);
 }
+
 .loader:before {
   width: 50%;
   height: 50%;
@@ -28,6 +31,7 @@
   left: 0;
   content: '';
 }
+
 .loader:after {
   background: #ffffff;
   width: 75%;
@@ -41,6 +45,7 @@
   bottom: 0;
   right: 0;
 }
+
 @-webkit-keyframes load3 {
   0% {
     -webkit-transform: rotate(0deg);
@@ -51,6 +56,7 @@
     transform: rotate(360deg);
   }
 }
+
 @keyframes load3 {
   0% {
     -webkit-transform: rotate(0deg);
